--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -69,11 +69,13 @@ Environmental damage caused by the use must be kept as small as possible.
                         style="background-image: url('#{userSession.user.gravatarHeaderUrl49}')">
                     <p:splitButton value="Kontostand: #{userSession.user.balance}" url="/internal/account.xhtml"
                                    onclick="location='/internal/account.xhtml'">
-                        <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-pencil"/>
-                        <p:menuitem value="Meine Einstellungen" url="/internal/members/user.xhtml?me=me"/>
+                        <p:menuitem value="Mein Konto" url="/internal/account.xhtml" icon="ui-icon-transferthick-e-w"/>
+                        <p:menuitem value="Einstellungen" url="/internal/members/user.xhtml?me=me"
+                                    icon="ui-icon-wrench"/>
+                        <p:menuitem value="Meine Anzeigen" url="/internal/advertisements/myAdvertisements.xhtml"
+                                    icon="ui-icon-star"/>
                         <p:menuitem value="Überweisung"
-                                    url="/internal/transaction.xhtml?clear=clear" icon="ui-icon-transferthick-e-w"/>
-                        <p:menuitem value="Meine Angebote" url="/impressum.xhtml" icon="ui-icon-star"/>
+                                    url="/internal/transaction.xhtml?clear=clear" icon="ui-icon-arrowthick-1-e"/>
                         <p:separator/>
                         <p:menuitem value="logout" url="/logout/logout.xhtml" icon="ui-icon-power"/>
                     </p:splitButton>
