--- a/src/main/webapp/internal/advertisements/edit.xhtml
+++ b/src/main/webapp/internal/advertisements/edit.xhtml
@@ -21,16 +21,18 @@ excluded.
 Environmental damage caused by the use must be kept as small as possible.
 
 -->
-<ui:composition template="/decorators/advertisementDecorator.xhtml"
+<ui:composition template="/decorators/menuDecorator.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://java.sun.com/jsf/core">
     <f:metadata>
+        <f:viewParam name="type" value="#{advertisements.type}"/>
+        <f:viewParam name="category" value="#{advertisements.category}"/>
         <f:viewParam name="advertisement" value="#{advertisements.advertisement}" converter="advertisementConverter"/>
     </f:metadata>
-    <ui:define name="advertisementContent">
-        <p:panel header="neue Anzeige">
+    <ui:define name="contentWithMenu">
+        <p:panel header="Anzeige bearbeiten">
             <ui:include src="editPartial.xhtml">
                 <ui:param name="advertisementToEdit" value="#{advertisements.editAdvertisement}"/>
             </ui:include>
