--- a/src/main/webapp/internal/advertisements/create.xhtml
+++ b/src/main/webapp/internal/advertisements/create.xhtml
@@ -30,7 +30,7 @@ Environmental damage caused by the use must be kept as small as possible.
 
         <p:panel header="neue Anzeige">
             <ui:include src="editPartial.xhtml">
-                <ui:param name="advertisementToEdit" value="#{advertisements.newAdvertisement}"/>
+                <ui:param name="advertisementToEdit" value="#{advertisementModel.newAdvertisement}"/>
             </ui:include>
         </p:panel>
     </ui:define>
